--- a/public/index.html
+++ b/public/index.html
@@ -29,6 +29,33 @@
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700" rel="stylesheet">
   </head>
   <body>
+    <script src="https://www.gstatic.com/firebasejs/6.0.4/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/6.0.4/firebase-database.js"></script>
+    
+    <script>
+      // Your web app's Firebase configuration
+      var firebaseConfig = {
+        // apiKey: "AIzaSyA5MovgyB8A9yQRjBW3Z_vFJ2PE1735f60",
+        // authDomain: "scdf-webapp.firebaseapp.com",
+        // databaseURL: "https://scdf-webapp-default-rtdb.asia-southeast1.firebasedatabase.app",
+        // projectId: "scdf-webapp",
+        // storageBucket: "scdf-webapp.appspot.com",
+        // messagingSenderId: "769931580138",
+        // appId: "1:769931580138:web:ca9c5b673541057c067d93",
+        // measurementId: "G-LWZKRXS2J0"
+        apiKey: "AIzaSyBFB_5bV5Wbbw-7g_Ai6O5rdSGe_kN0py4",
+        authDomain: "scdf-e12e8.firebaseapp.com",
+        databaseURL: "https://scdf-e12e8-default-rtdb.firebaseio.com",
+        projectId: "scdf-e12e8",
+        storageBucket: "scdf-e12e8.appspot.com",
+        messagingSenderId: "220004955204",
+        appId: "1:220004955204:web:2ebf6d6cc2fee5e8bc3811"
+      };
+      // Initialize Firebase
+      firebase.initializeApp(firebaseConfig);
+      var database = firebase.database();
+    </script>
+
     <noscript>
       <strong>We're sorry but vue-argon-design-system doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
